@@ -1,6 +1,5 @@
 /*
- * reserved comment block
- * DO NOT REMOVE OR ALTER!
+ * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
  */
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -69,7 +68,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
     b      = bytes.readShort();
   }
 
-  public Number getValue() { return new Integer(b); }
+  public Number getValue() { return Integer.valueOf(b); }
 
   /** @return Type.SHORT
    */
